k8s/sellers/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sellers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sellers
  template:
    metadata:
      labels:
        app: sellers
      annotations:
        nginx.ingress.kubernetes.io/configuration-snippet: |
          add_header Access-Control-Allow-Origin *;
          add_header Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT";
          add_header Access-Control-Allow-Credentials true;
        nginx.ingress.kubernetes.io/enable-cors: "false"
        nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, DELETE, OPTIONS"
    spec:
      containers:
        - name: sellers
          image: volodymyrmushii/sellers:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
