k8s/sellers/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sellers-service
spec:
  ports:
    - port: 8080
  selector:
    app: sellers
