k8s/sellers/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sellers-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: sellers-service
                port:
                  number: 8080
            path: /sellers
